# OperatingSystems

./: serie7_theory.txt
Operating Systems/: Zusammenfassung Betriebssysteme FS 17.docx  ~$sammenfassung Betriebssysteme FS 17.docx  ~WRL0003.tmp  ~WRL0171.tmp
Operating Systems/Series 0/: CMakeLists.txt  epl 5).txt  error.c  fib.c  fibonacci.c  linked_list.c  main.c  multiply.c  net.c  product.c  someDemoCode.c  someDemoCode.h  substr.c  substring.c
Operating Systems/Series 1/skeletons/: CMakeLists.txt  statistics  statistics.c  zombies  zombies.c
Operating Systems/Series 2/: CMakeLists.txt  answers.txt  main.c  main_osx.c
Operating Systems/Series 2/skeletons/: resources.c
Operating Systems/Series 3/: CMakeLists.txt  main.c
Operating Systems/Series 4/: solutions.txt
Operating Systems/Slides/: bs_13_mitAnimationen.pptx
Operating Systems/Theroretische Serien/: Serie 09.docx  Serie 10+11.docx  Serie 13.docx  serie 12.docx
